# aniir

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  RBAC_Configuration_Template.xlsx  README.md  TASK-DEPENDENCY-GRAPH.md  action.yml  aiplan.md  aniir.config.yaml  aniir.javascript-react.yaml  aniir.python-fastapi.yaml  automakerreview.md  docker-compose.yml  executionplan.md  gapanalysis.md  nixpacks.toml  package.json  rbac_plan.md  schema-alignment.md  template.html  tsconfig.json  vitest.config.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  db_schema.json  nixpacks.toml  pyproject.toml  requirements.txt  test_client_api.py  test_db_connection_ecoled.py  test_db_detailed.py  test_db_pymssql.py
backend/app/: __init__.py  cli.py  config.py  database.py  dependencies.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  redis.py  security.py  task_scheduler.py  websocket_manager.py
backend/app/integrations/: __init__.py
backend/app/locales/: fr.json  zh.json
backend/app/migrations/: __init__.py  runner.py
backend/app/models/: __init__.py  activity.py  base.py  brand.py  business_unit.py  category.py  chat.py  client.py  client_contact.py  client_delegate.py  client_invoice.py  client_invoice_line.py  client_invoice_payment.py  client_product_price.py  client_type.py  consignee.py  cost_plan_status.py  costplan.py  country.py  currency.py  delivery_form.py  document_attachment.py  drive.py  email_log.py  inventory.py  invoice.py  invoice_line.py  landed_cost.py  language.py  logistics.py  order.py  payment.py  payment_mode.py  payment_term.py  product.py  product_attribute.py  product_component.py  product_type.py  project.py  purchase_intent.py  (+20 more)
backend/app/repositories/: __init__.py  accounting_repository.py  chat_repository.py  client_invoice_repository.py  delivery_repository.py  drive_repository.py  email_log_repository.py  landed_cost_repository.py  product_repository.py  project_repository.py  quote_repository.py  shipment_repository.py  warehouse_repository.py
backend/app/schemas/: __init__.py  accounting.py  auth.py  brand.py  category.py  chat.py  client.py  client_activity.py  client_contact.py  client_delegate.py  client_invoice.py  client_product_price.py  client_type.py  consignee.py  costplan.py  currency.py  delivery.py  delivery_ui.py  document.py  document_attachment.py  drive.py  email_log.py  import_data.py  invoice.py  invoice_pdf.py  invoice_status.py  invoice_ui.py  landed_cost.py  lookup.py  order.py  order_status.py  order_ui.py  payment.py  payment_allocation.py  payment_term.py  pdf.py  product.py  product_attribute.py  product_component.py  project.py  (+16 more)
backend/app/services/: __init__.py  accounting_service.py  auth_service.py  brand_service.py  cache_service.py  chat_service.py  client_activity_service.py  client_contact_service.py  client_delegate_service.py  client_product_price_service.py  client_service.py  client_type_service.py  consignee_service.py  currency_service.py  delivery_service.py  document_attachment_service.py  drive_service.py  email_log_service.py  email_service.py  import_service.py  invoice_pdf_service.py  invoice_service.py  invoice_status_service.py  landed_cost_service.py  lookup_service.py  order_service.py  order_status_service.py  payment_allocation_service.py  payment_service.py  pdf_generator.py  pdf_service.py  product_attribute_service.py  product_service.py  project_service.py  purchase_intent_service.py  (+19 more)
backend/scripts/: audit_models.py  create_test_user.py  extract_schema.py  get_schema_info.py  show_key_tables.py  show_schemas.py  test_connection.ps1  test_connection.sh  test_import.py  verify_e2e.py
backend/tests/: conftest.py  test_accounting.py  test_accounting_service.py  test_all_models_query_existing_data.py  test_chat_websocket.py  test_client_contact_service.py  test_client_export.py  test_client_model.py  test_client_type_model.py  test_costplan_model.py  test_delivery_form_model.py  test_drive_service.py  test_email_service.py  test_email_tasks.py  test_invoice_template.py  test_jwt.py  test_landed_cost_service.py  test_payment_allocation.py  test_payment_mode_model.py  test_process_webhook_event_task_verification.py  test_quote_service.py  test_rate_limiter.py  test_retry.py  test_role_model.py  test_shopify_graphql_client.py  test_shopify_oauth.py  test_shopify_tasks.py  test_shopify_webhooks.py  test_statement_service.py  test_stock_movement_model.py  test_token_blacklist.py  test_warehouse_model.py  test_webhook_idempotency.py  test_websocket_jwt_auth.py  test_x3_export_api.py  test_x3_export_service.py
(+1458 files in other folders)
