[project]
name = "erp-backend"
version = "1.0.0"
description = "ERP System Backend API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AXTECH", email = "dev@axtech.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    # FastAPI and ASGI
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "starlette>=0.35.0,<1.0.0",
    
    # Database - SQL Server
    "sqlalchemy>=2.0.25,<3.0.0",
    "pyodbc>=5.0.1,<6.0.0",
    "aioodbc>=0.5.0,<1.0.0",
    
    # Pydantic and validation
    "pydantic>=2.5.3,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "email-validator>=2.1.0,<3.0.0",
    
    # Authentication and Security
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    
    # HTTP and async utilities
    "httpx>=0.26.0,<1.0.0",
    "aiofiles>=23.2.1,<24.0.0",
    
    # WebSocket and Real-time Communication
    "python-socketio>=5.11.0,<6.0.0",
    "websockets>=12.0,<13.0.0",
    
    # Redis for caching and pub/sub
    "redis>=5.0.1,<6.0.0",
    "aioredis>=2.0.1,<3.0.0",
    
    # Date/time utilities
    "python-dateutil>=2.8.2,<3.0.0",
    
    # Logging and monitoring
    "structlog>=24.1.0,<25.0.0",
    
    # Environment and configuration
    "python-dotenv>=1.0.0,<2.0.0",
    
    # PDF Generation
    "reportlab>=4.0.0,<5.0.0",
    "weasyprint>=61.0,<62.0.0",
    
    # Object Storage (MinIO/S3)
    "minio>=7.2.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.4,<8.0.0",
    "pytest-asyncio>=0.23.3,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "httpx>=0.26.0,<1.0.0",
    "faker>=22.0.0,<23.0.0",
    
    # Code quality
    "ruff>=0.1.11,<1.0.0",
    "black>=23.12.1,<24.0.0",
    "isort>=5.13.2,<6.0.0",
    "mypy>=1.8.0,<2.0.0",
    
    # Type stubs
    "types-python-dateutil>=2.8.19,<3.0.0",
    "types-passlib>=1.7.7,<2.0.0",
    "types-redis>=4.6.0,<5.0.0",
]

docs = [
    "mkdocs>=1.5.3,<2.0.0",
    "mkdocs-material>=9.5.3,<10.0.0",
    "mkdocstrings[python]>=0.24.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/axtech/erp2025"
Documentation = "https://github.com/axtech/erp2025#readme"
Repository = "https://github.com/axtech/erp2025"

[project.scripts]
erp-api = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001", "S101"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
skip = [".venv", "venv", "migrations"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests", "migrations"]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
